# peanut

./: .gitignore  ARCHITECTURE.md  Cargo.toml  PRINCIPLES.md  PRIVILEGED.md  README.md  ROADMAP.md
.github/workflows/: ci.yml
doc/: generate.sh  pnut.1  pnut.1.scd  pnut.toml.5  pnut.toml.5.scd
examples/: full.toml  minimal.toml
kafel/: Cargo.toml  README.md
kafel/src/: ast.rs  codegen.rs  error.rs  interp.rs  lib.rs  parser.rs  policy.pest  prelude.policy  resolve.rs  resolver.rs
kafel/src/codegen/: expr.rs  ranges.rs  reverse.rs
kafel/src/tests/: bpf_semantics.rs  compiler_limits.rs  include_errors.rs  mod.rs  parser_errors.rs  resolver.rs
kafel/tests/: compile.rs  filesystem_resolver.rs  includes.rs  stdlib.rs
pnut/: Cargo.toml
pnut-child/: Cargo.toml  README.md
pnut-child/src/: caps.rs  env.rs  error.rs  fd.rs  io.rs  landlock.rs  lib.rs  net.rs  process.rs  report.rs  rlimit.rs  runtime.rs  seccomp.rs  spec.rs
pnut-child/src/mount/: dev.rs  mod.rs  syscall.rs
pnut-cli/: Cargo.toml
pnut-cli/src/: main.rs
pnut-cli/tests/: caps_network.rs  caps_network_evaluator.rs  env_hostname_session.rs  fork_server.rs  integration.rs  invariants.rs  landlock.rs  landlock_evaluator.rs  landlock_v2_v5.rs  landlock_v2_v5_adversarial.rs  landlock_v4_net.rs  landlock_v4_net_adversarial.rs  library_api.rs  mode_hardening.rs  mount_ordering.rs  rlimits.rs  seccomp.rs
pnut/src/: caps.rs  config.rs  env.rs  error.rs  fd.rs  idmap.rs  landlock.rs  lib.rs  mount.rs  namespace.rs  net.rs  rlimit.rs  sandbox.rs  seccomp.rs
pnut/src/mount/: dev.rs  syscall.rs
(+5 files in other folders)
