[package]
name = "pnut-child"
description = "Minimal no_std child-runtime helpers for pnut sandbox setup"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
readme = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
categories = { workspace = true }
keywords = { workspace = true }

[dependencies]
libc = { workspace = true }
