[package]
name = "pnut-cli"
description = "CLI for pnut, an unprivileged Linux sandbox"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
readme = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
categories = { workspace = true }
keywords = { workspace = true }

[[bin]]
name = "pnut"
path = "src/main.rs"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
toml = "1"
pnut = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
libc = { workspace = true }
